--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "description": "Description",
+  "license": "MIT",
   "scripts": {
-    "start": "node server/server.js",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false \"cd server && npm install\" \"cd client && yarn install\"  \"cd client && yarn build\""
+    "dev": "concurrently \"npm run develop\" \"cd client && yarn start\" ",
+    "start": "node server.js",
+    "develop": "nodemon server.js",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install && yarn install --prefix client && yarn build --prefix client\""
   },
   "repository": {
     "type": "git",
@@ -18,7 +22,39 @@
     "url": "https://gitlab.com/ibouge/ibouge-react/issues"
   },
   "homepage": "https://gitlab.com/ibouge/ibouge-react#readme",
+
+  "dependencies": {
+    "aws-sdk": "^2.270.1",
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.19.0",
+    "bson": "^4.0.4",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^4.2.2",
+    "consolidate": "^0.14.5",
+    "cookie-parser": "^1.4.3",
+    "ejs": "^2.5.6",
+    "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "formidable": "^1.1.1",
+    "jpeg-autorotate": "^4.0.0",
+    "jshint": "^2.11.0",
+    "lightbox2": "^2.10.0",
+    "mime-types": "^2.1.19",
+    "mongoose": "^5.11.18",
+    "morgan": "^1.10.0",
+    "nodemailer": "^4.0.1",
+    "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
+    "passport-google-oauth": "^2.0.0",
+    "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.4",
+    "path": "^0.12.7",
+    "randomatic": "^3.0.0",
+    "socket.io": "^2.1.0",
+    "socket.io-logger": "0.0.2"
+  },
   "devDependencies": {
+    "nodemon": "^2.0.7",
     "concurrently": "^6.0.0"
   }
 }
