--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "concurrently \"npm run develop\" \"cd client && yarn start\" ",
     "start": "node server.js",
     "develop": "nodemon server.js",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install && yarn install --prefix client && yarn build --prefix client\""
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install && yarn install --prefix client && yarn build --prefix client"
   },
   "repository": {
     "type": "git",
@@ -56,5 +56,9 @@
   "devDependencies": {
     "nodemon": "^2.0.7",
     "concurrently": "^6.0.0"
+  },
+  "engines": {
+    "node": "15.12.x",
+    "npm": "7.6.x"
   }
 }
